# src/modules/admin/admin_routes.ts
@@ -111,6 +111,11 @@ router.post("/key-values", authenticator, admin_controller.keyValues)
 router.patch("/key-values/:_id", authenticator, admin_controller.editKeyValue)
 router.get("/main-keys/:_id", authenticator, admin_controller.getAllKeys)
 
+router.post("/size", authenticator, admin_controller.add_product_size)
+router.put("/size", authenticator, admin_controller.edit_product_size)
+router.get("/size", admin_controller.get_product_size)
+router.get("/size/:_id", admin_controller.get_single_product_size)
+router.delete("/size/:_id", authenticator, admin_controller.delete_product_size)
 // router.post("/addmainkeys", admin_controller.add_main_keys)
 // router.post("/addkeys", admin_controller.add_keys)
 // router.get("/keys",authenticator, admin_controller.getAllKeys)
